--- a/KaiJing.vcxproj.filters
+++ b/KaiJing.vcxproj.filters
@@ -33,6 +33,15 @@
     <ClCompile Include="DX12DepthStencilBuffer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="DX12Viewport.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DX12ViewportUtils.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="PerformanceTimer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DX12Device.h">
@@ -50,5 +59,17 @@
     <ClInclude Include="DX12DepthStencilBuffer.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DX12Viewport.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DX12ViewportUtils.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="PerformanceTimer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
