--- a/KaiJing.vcxproj
+++ b/KaiJing.vcxproj
@@ -133,8 +133,11 @@
     <ClCompile Include="DX12Viewport.cpp" />
     <ClCompile Include="DX12ViewportUtils.cpp" />
     <ClCompile Include="GameTimer.cpp" />
+    <ClCompile Include="KJApp.cpp" />
+    <ClCompile Include="KJUtil.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="PerformanceTimer.cpp" />
-    <ClCompile Include="SplashScreen.cpp" />
+    <ClCompile Include="TestApp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DX12DepthStencilBuffer.h">
@@ -147,7 +150,10 @@
     <ClInclude Include="DX12Viewport.h" />
     <ClInclude Include="DX12ViewportUtils.h" />
     <ClInclude Include="GameTimer.h" />
+    <ClInclude Include="KJApp.h" />
+    <ClInclude Include="KJUtil.h" />
     <ClInclude Include="PerformanceTimer.h" />
+    <ClInclude Include="TestApp.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
