--- a/KaiJing.vcxproj
+++ b/KaiJing.vcxproj
@@ -103,6 +103,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)ThirdParty\imgui;$(ProjectDir)ThirdParty\imgui\backends;$(ProjectDir)Source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -118,6 +119,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)ThirdParty\imgui;$(ProjectDir)ThirdParty\imgui\backends;$(ProjectDir)Source;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -125,7 +127,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="LRU.cpp" />
     <ClCompile Include="Source\App\EditorApp.cpp" />
     <ClCompile Include="Source\App\main.cpp" />
     <ClCompile Include="Source\App\TestApp.cpp" />
@@ -139,6 +140,9 @@
     <ClCompile Include="Source\DX12\DX12Viewport.cpp" />
     <ClCompile Include="Source\DX12\DX12ViewportUtils.cpp" />
     <ClCompile Include="Source\Renderer\Core\ShaderManager.cpp" />
+    <ClCompile Include="Source\Renderer\Resources\Vertex.cpp" />
+    <ClCompile Include="Source\Renderer\Resources\VertexComponents.cpp" />
+    <ClCompile Include="Source\Renderer\Resources\VertexFactory.cpp" />
     <ClCompile Include="Source\Renderer\Resources\VertexLayout.cpp" />
     <ClCompile Include="Source\Timer\GameTimer.cpp" />
     <ClCompile Include="Source\Timer\PerformanceTimer.cpp" />
@@ -151,7 +155,6 @@
     <ClCompile Include="ThirdParty\imgui\imgui_widgets.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LRU.h" />
     <ClInclude Include="Source\App\EditorApp.h" />
     <ClInclude Include="Source\App\TestApp.h" />
     <ClInclude Include="Source\Core\KJApp.h" />
@@ -164,6 +167,9 @@
     <ClInclude Include="Source\DX12\DX12Viewport.h" />
     <ClInclude Include="Source\DX12\DX12ViewportUtils.h" />
     <ClInclude Include="Source\Renderer\Core\ShaderManager.h" />
+    <ClInclude Include="Source\Renderer\Resources\Vertex.h" />
+    <ClInclude Include="Source\Renderer\Resources\VertexComponents.h" />
+    <ClInclude Include="Source\Renderer\Resources\VertexFactory.h" />
     <ClInclude Include="Source\Renderer\Resources\VertexLayout.h" />
     <ClInclude Include="Source\Timer\GameTimer.h" />
     <ClInclude Include="Source\Timer\PerformanceTimer.h" />
