--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace]
 Pos=0,19
-Size=1920,1061
+Size=1476,840
 Collapsed=0
 
 [Window][Debug##Default]
@@ -24,13 +24,13 @@ Collapsed=0
 
 [Window][Scene View]
 Pos=0,38
-Size=1342,1042
+Size=1106,821
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Inspector]
-Pos=1344,38
-Size=576,1042
+Pos=1108,38
+Size=368,821
 Collapsed=0
 DockId=0x00000002,0
 
@@ -39,8 +39,16 @@ Pos=643,183
 Size=550,680
 Collapsed=0
 
+[Window][Dear ImGui Demo/ResizableChild_478B81A3]
+IsChild=1
+Size=499,136
+
+[Window][Dear ImGui Demo/Red_BEEF922B]
+IsChild=1
+Size=200,100
+
 [Docking][Data]
-DockSpace   ID=0x14621557 Window=0x3DA2F1DE Pos=0,38 Size=1920,1042 Split=X
-  DockNode  ID=0x00000001 Parent=0x14621557 SizeRef=1342,1080 Selected=0x15E43931
-  DockNode  ID=0x00000002 Parent=0x14621557 SizeRef=576,1080 CentralNode=1 Selected=0x36DC96AB
+DockSpace   ID=0x14621557 Window=0x3DA2F1DE Pos=0,38 Size=1476,821 Split=X
+  DockNode  ID=0x00000001 Parent=0x14621557 SizeRef=1106,1080 Selected=0x15E43931
+  DockNode  ID=0x00000002 Parent=0x14621557 SizeRef=368,1080 CentralNode=1 Selected=0x36DC96AB
 
